# quantumSpectralFractalWeaving

./: PRD.md  README.md  create_lab_notebook.py  find_critical_ridge.py  generate_simulated_eeg.py  parameter_sweep.py  pyproject.toml  qsfw_simulation.py
.github/workflows/: ci.yml
src/quantum_spectral_fractal_weaving/: PRD.md  README.md  create_lab_notebook.py  find_critical_ridge.py  generate_simulated_eeg.py  parameter_sweep.py  qsfw_simulation.py  smoke_test.py
tests/: test_components.py
