[tool.poetry]
name = "quantum-spectral-fractal-weaving"
version = "0.1.0"
description = "Quantum Spectral Fractal Weaving Simulation Engine: multi-scale, modular, fast, and extensible."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24"
scipy = "^1.10"
matplotlib = "^3.7"
pandas = "^1.5"
networkx = "^3.0"
qutip = "^4.7"
joblib = "^1.2"
rich = "^13.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = "^23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
